# src/routes/index.js
@@ -3,10 +3,12 @@ import routesRouter from '../modules/routes/routes.router.js'
 import busesRouter from '../modules/buses/bus.router.js'
 import tripsRouter from '../modules/trips/trip.router.js'
 import alertsRouter from '../modules/alerts/alerts.router.js'
+import stopsRouter from '../modules/stops/stop.router.js'
 
 const api = Router()
 
 api.use('/routes', routesRouter)
+api.use('/stops', stopsRouter)
 api.use('/buses', busesRouter)
 api.use('/trips', tripsRouter)
 api.use('/alerts', alertsRouter)
